--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="pt-br">
 
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>Decodificador</title>
 
@@ -13,7 +14,7 @@
 
     <body>
         <header class="header">
-            <img src="tectree.svg" class="tectree">
+            <img src="tectree.svg" class="tectree" alt="Árvore de conexões elétricas">
         </header>
 
         <main>
@@ -25,7 +26,7 @@
             </div>
 
             <div class="resposta">
-                <img src="cod.svg" class="cod">
+                <img src="cod.svg" class="cod" alt="computador">
                 <div class="msg">
                     <p>Nenhuma mensagem encontrada</p>
                     <p>Digite um texto que você deseja criptografar ou descriptografar</p>
@@ -35,7 +36,11 @@
 
         <footer>
             <p>Bruno Santos Silveira</p>
+            <a href="https://www.linkedin.com/in/bruno-santos-silveira/"><ion-icon name="logo-linkedin"></ion-icon></a>
         </footer>
+
+        <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+        <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     </body>
 
 </html>
