challange_one_alura

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
         <footer>
             <p>Bruno Santos Silveira</p>
-            <a href="https://www.linkedin.com/in/bruno-santos-silveira/"><ion-icon name="logo-linkedin"></ion-icon></a>
+            <a href="https://www.linkedin.com/in/bruno-santos-silveira/" target="_blank"><ion-icon name="logo-linkedin"></ion-icon></a>
         </footer>
 
         <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
