challange_one_alura

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <img src="tectree.svg" class="header__logo" alt="Árvore de conexões elétricas">
         </header>
 
-        <main>
+        <main class="conteudo">
             <section class="pergunta">
                 <textarea class="texto" cols="30" rows="1" placeholder="Digite para criptografar"></textarea>
                 <p class="pergunta__p">
