challange_one_alura

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <textarea class="texto" cols="30" rows="1" placeholder="Digite para criptografar"></textarea>
                 <p class="pergunta__p">
                     <img src="vector.svg" alt="ponto de exclamação">
-                    Apenas letras minúsculas e sem acento
+                    Apenas letras minúsculas e sem acento.
                 </p>
                 <div class="botao">
                     <input class="botao__criptografar" type="button" value="criptografar" onclick="botao_cripto()">
