--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="pergunta">
                 <textarea class="texto" cols="30" rows="1" placeholder="Digite para criptografar"></textarea>
                 <p class="pergunta__p">
-                    <img src="vector.svg" alt="ponto de exclamação">
+                    <img src="exclamacao.svg" alt="ponto de exclamação">
                     Apenas letras minúsculas e sem acento.
                 </p>
                 <div class="botao">
